fix radio boxes

--- a/projects/sike/index.html
+++ b/projects/sike/index.html
@@ -16,31 +16,31 @@
           <h2>Main Course</h2>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Grilled Chicken Sandwich">
+              <input type="radio" name="menu-item-main" value="Grilled Chicken Sandwich">
               Grilled Chicken Sandwich
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Beef Burger">
+              <input type="radio" name="menu-item-main" value="Beef Burger">
               Beef Burger
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Vegetarian Lasagna">
+              <input type="radio" name="menu-item-main" value="Vegetarian Lasagna">
               Vegetarian Lasagna
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Fish Tacos">
+              <input type="radio" name="menu-item-main" value="Fish Tacos">
               Fish Tacos
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Falafel Wrap">
+              <input type="radio" name="menu-item-main" value="Falafel Wrap">
               Falafel Wrap
             </label>
           </div>
@@ -49,31 +49,31 @@
           <h2>Appetizers</h2>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Sweet Potato Fries">
+              <input type="radio" name="menu-item-app" value="Sweet Potato Fries">
               Sweet Potato Fries
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Buffalo Wings">
+              <input type="radio" name="menu-item-app" value="Buffalo Wings">
               Buffalo Wings
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Caprese Salad">
+              <input type="radio" name="menu-item-app" value="Caprese Salad">
               Caprese Salad
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Mozzarella Sticks">
+              <input type="radio" name="menu-item-app" value="Mozzarella Sticks">
               Mozzarella Sticks
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Hummus and Pita">
+              <input type="radio" name="menu-item-app" value="Hummus and Pita">
               Hummus and Pita
             </label>
           </div>
@@ -82,31 +82,31 @@
           <h2>Sides</h2>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="French Fries">
+              <input type="radio" name="menu-item-side" value="French Fries">
               French Fries
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Garlic Bread">
+              <input type="radio" name="menu-item-side" value="Garlic Bread">
               Garlic Bread
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Onion Rings">
+              <input type="radio" name="menu-item-side" value="Onion Rings">
               Onion Rings
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Fried Plantains">
+              <input type="radio" name="menu-item-side" value="Fried Plantains">
               Fried Plantains
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Roasted Vegetables">
+              <input type="radio" name="menu-item-side" value="Roasted Vegetables">
               Roasted Vegetables
             </label>
           </div>
@@ -115,31 +115,31 @@
           <h2>Drinks</h2>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Soda">
+              <input type="radio" name="menu-item-drnk" value="Soda">
               Soda
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Iced Tea">
+              <input type="radio" name="menu-item-drnk" value="Iced Tea">
               Iced Tea
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Lemonade">
+              <input type="radio" name="menu-item-drnk" value="Lemonade">
               Lemonade
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Fruit Smoothie">
+              <input type="radio" name="menu-item-drnk" value="Fruit Smoothie">
               Fruit Smoothie
             </label>
           </div>
           <div class="menu-item">
             <label>
-              <input type="checkbox" name="menu-item" value="Coffee">
+              <input type="radio" name="menu-item-drnk" value="Coffee">
               Coffee
             </label>
           </div>
