--- a/projects/digits/index.html
+++ b/projects/digits/index.html
@@ -871,14 +871,15 @@
                     <i class="fas fa-trash"></i>
                 </div>
             </div>
+        </div>
+        <div class="right-panel">
+            <h2 class="center">Results</h2>
+            <div class="histogram-container" id="histogram-container">
+            </div>
             <div class="output">
                 <span class="pretext">I think that's a </span>
                 <span class="prediction">1</span>
-                <span class="posttext">.</span>
-            </div>
-        </div>
-        <div class="right-panel">
-            <div class="histogram-container" id="histogram-container">
+                <span class="posttext"></span>
             </div>
         </div>
     </div>
