--- a/projects/digits/index.html
+++ b/projects/digits/index.html
@@ -10,9 +10,11 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer defer src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script>
 </head>
 
 <body>
+    <script src="your_model.js"></script>
     <div class="container">
         <div class="left-panel">
             <div class="header">
