Fix output display in index.html

--- a/projects/digits/index.html
+++ b/projects/digits/index.html
@@ -876,14 +876,14 @@
         </div>
         <div class="right-panel">
             <h2 class="center">Results</h2>
-            <div class="histogram-container" id="histogram-container">
-            </div>
-            <div class="output">
-                <span class="pretext">I think that's a </span>
-                <span class="prediction">1</span>
-                <span class="posttext"></span>
-            </div>
+            <!-- <div class="histogram-container" id="histogram-container"> -->
         </div>
+        <div class="output">
+            <span class="pretext">I think that's a </span>
+            <span class="prediction">1</span>
+            <span class="posttext"></span>
+        </div>
+    </div>
     </div>
 </body>
 
