--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title>abhigyandsa</title>
   </head>
   <body>
-    <h1>Hello!</h1>
-    <p><!--email_off-->21f1003422@ds.study.iitm.ac.in<!--/email_off--></p>
     
+    <a href="www.google.com" target="_blank" >Hello!</a>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
